--- a/recipes/PBJ.html
+++ b/recipes/PBJ.html
@@ -10,9 +10,30 @@
 
         <img src="../images/Pbj.jpg" alt="Peanut Butter and Jelly" width="300" height="300">
 
+        <h2> Enjoy a delicious Grilled Peanut Butter and Jelly Sandwich!</h2>
 
+            <p> There is no other way to eat a peanut butter and jelly sandwich. Once you eat one grilled, you will <b>NEVER</b> want to eat it the normal way again!!</p>
 
+            <p> Indulge in the perfect fusion of sweet and savory with our grilled peanut butter and jelly sandwich recipe. The warm, crispy exterior contrasts beautifully with the gooey, melty peanut butter and jelly filling for a mouthwatering treat</p>
 
-        
+        <h3>Ingredients</h3>
+
+            <ul>
+                <li>Bread Slices</li>
+                <li>Peanut Butter</li>
+                <li>Jelly of your choice</li>
+                <li>Butter or Margarine for Grilling</li>
+            </ul>
+        <h3>Steps</h3>    
+
+            <ol>
+                <li>Spread peanut butter on bread</li>
+                <li>Spread Jelly on bread</li>
+                <li>Butter the exterior of the outside of bread slices</li>
+                <li>Heat a skillet or pan</li>
+                <li>Carefully place the prepared sandwich in the skillet and let it cook for about 2-4 minutes on each side. Check the bottom periodically to ensure it doesn't burn. The sandwich is ready when both sides are golden brown, and the cheese has melted.</li>
+                <li>Remove and serve!</li>
+            </ol>
+
     </body>
 </html>
