added images on homepage, deleted recipes folder

--- a/ChickenPotPie.html
+++ b/ChickenPotPie.html
@@ -7,8 +7,9 @@
 
     <body>
         <h1>Chicken Pot Pie</h1>
+        <img src="PotPie.jpg" alt="Chicken Pot Pie" width="400" length="400">
 
-        <img src="../images/PotPie.jpg" alt="Pot Pie width="300" height="300"
+
 
         
     </body>
