--- a/PBJ.html
+++ b/PBJ.html
@@ -8,7 +8,7 @@
     <body>
         <h1>Grilled Peanut Butter and Jelly</h1>
 
-        <img src="../images/Pbj.jpg" alt="Peanut Butter and Jelly" width="300" height="300">
+        <img src="Pbj.jpg" alt="Peanut Butter and Jelly" width="300" height="300">
 
         <h2> Enjoy a delicious Grilled Peanut Butter and Jelly Sandwich!</h2>
 
