--- a/index.html
+++ b/index.html
@@ -8,8 +8,20 @@
     <body>
         <h1>Odin Recipes</h1>
 
-        <a href="recipes/ChickenPotPie.html">Chicken Pot Pie</a>
-        <a href="recipes/MacaroniandCheese.html">Macaroni and Cheese</a>
-        <a href="recipes/PBJ.html">Peant Butter and Jelly</a>
+        <table border="0" cellspacing="0" cellpadding="10">
+            <tr>
+                <!-- Image Cells -->
+                <td><img src="PotPie.jpg" alt="Chicken Pot Pie" width="400" height="400"></td>
+                <td><img src="Mac.jpg" alt="Macaroni and Cheese" width="400" height="400"></td>
+                <td><img src="Pbj.jpg" alt="Peanut Butter and Jelly" width="400" height="400"></td>
+            </tr>
+            <tr>
+                <!-- Link Cells -->
+                <td><a href="ChickenPotPie.html">Chicken Pot Pie</a></td>
+                <td><a href="MacaroniandCheese.html">Macaroni and Cheese</a></td>
+                <td><a href="PBJ.html">Peanut Butter and Jelly</a></td>
+            </tr>
+        </table>
+
     </body>
 </html>
