--- a/MacaroniandCheese.html
+++ b/MacaroniandCheese.html
@@ -8,7 +8,7 @@
     <body>
         <h1>Macaroni and Cheese</h1>
 
-        <img src="../images/Mac.jpg" alt="Macaroni and Cheese width="300" height="300">
+        <img src="Mac.jpg" alt="Macaroni and Cheese width="300" height="300">
 
         
     </body>
