Finished pot pie and mac pages. Added lists

--- a/ChickenPotPie.html
+++ b/ChickenPotPie.html
@@ -10,6 +10,39 @@
         <img src="PotPie.jpg" alt="Chicken Pot Pie" width="400" length="400">
 
 
+        <h2>Experience the Ultimate Comfort with Chicken Pot Pie!</h2>
+
+        <p>Dive into this classic dish with a twist. The charred, exterior pairs perfectly with the creamy, rich filling of chicken, vegetables, and gravy for a delightful culinary experience.</p>
+
+        <h3>Ingredients</h3>
+
+        <ul>
+            <li>Pie Crust (store-bought or homemade)</li>
+            <li>Boneless chicken breasts, diced</li>
+            <li>Mixed vegetables (carrots and peas)</li>
+            <li>Butter or oil for sautéing</li>
+            <li>Flour</li>
+            <li>Chicken broth</li>
+            <li>Heavy cream or milk</li>
+            <li>Salt and pepper to taste</li>
+            <li>Butter or Margarine for Grilling</li>
+        </ul>
+
+    <h3>Steps</h3>
+
+        <ol>
+            <li>In a pan, sauté the diced chicken in butter or oil until fully cooked. Remove and set aside.</li>
+            <li>In the same pan, sauté the mixed vegetables until softened.</li>
+            <li>Add flour to the pan and stir to make a roux. Cook for a minute or two.</li>
+            <li>Slowly pour in the chicken broth while stirring, followed by the heavy cream or milk. Bring to a simmer.</li>
+            <li>Add back the cooked chicken and season with salt and pepper. Stir well and let the filling cool slightly.</li>
+            <li>Roll out the pie crust and fill half with the chicken mixture. Fold the other half over and crimp the edges.</li>
+            <li>Butter the exterior of the pie crust.</li>
+            <li>Heat a skillet or grill. Place the prepared pot pie on it and cook for about 3-5 minutes on each side, checking to ensure it doesn't burn. It's ready when both sides are golden brown and crispy.</li>
+            <li>Remove from the heat, let it cool for a few minutes, then serve and enjoy!</li>
+        </ol>
+
+
 
         
     </body>
