--- a/MacaroniandCheese.html
+++ b/MacaroniandCheese.html
@@ -10,6 +10,39 @@
 
         <img src="Mac.jpg" alt="Macaroni and Cheese width="300" height="300">
 
+        <p>The combination of creamy cheese, tender pasta, and the unmistakable flavor of the grill makes this dish a true game-changer. The addition of milk and eggs ensures a creamy, custard-like texture that will have you craving more.</p>
+
+        <h2>Savor the Richness of Grilled Macaroni and Cheese!</h2>
+
+        <p>Discover a new way to enjoy the classic mac and cheese dish! Grilling the macaroni and cheese adds a delightful crispy layer, enhancing the gooey, cheesy goodness within.</p>
+
+    <h3>Ingredients</h3>
+
+        <ul>
+            <li>Elbow Macaroni</li>
+            <li>Butter or oil for sautéing</li>
+            <li>Shredded sharp cheddar cheese</li>
+            <li>Milk</li>
+            <li>Eggs, beaten</li>
+            <li>Salt and pepper to taste</li>
+            <li>Breadcrumbs (optional for added crunch)</li>
+            <li>Butter or Margarine for Grilling</li>
+        </ul>
+
+    <h3>Steps</h3>
+
+        <ol>
+            <li>Boil the elbow macaroni in a pot of salted water until al dente. Drain and set aside.</li>
+            <li>In a separate pot, melt butter or heat oil. Add the shredded cheese and stir until melted.</li>
+            <li>Slowly pour in the milk while continuously stirring. Let it come to a gentle simmer.</li>
+            <li>Gradually add the beaten eggs to the cheese mixture, stirring constantly to prevent the eggs from scrambling. The mixture will start to thicken.</li>
+            <li>Season with salt and pepper, then fold in the cooked macaroni until well coated with the cheese mixture. Let it cool slightly.</li>
+            <li>Butter the exterior of a sandwich or panini press. If you don't have one, you can use a skillet.</li>
+            <li>Place a portion of the macaroni and cheese mixture between two slices of bread or inside a folded tortilla. Add breadcrumbs for an added crunch if desired.</li>
+            <li>Grill the sandwich or tortilla wrap until the exterior is golden brown and crispy, about 2-4 minutes on each side.</li>
+            <li>Remove from the heat, let it sit for a few minutes, then serve and enjoy the grilled macaroni and cheese delight!</li>
+        </ol>
+
         
     </body>
 </html>
