--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Odin Recipes</title>
+        <title>Recipes</title>
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
+        <h1>Recipes</h1>
 
         <table border="0" cellspacing="0" cellpadding="10">
             <tr>
